fix spacing

--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -2450,6 +2450,11 @@ select {
   padding-bottom: 1rem;
 }
 
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
 .pb-16 {
   padding-bottom: 4rem;
 }
